--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ published: true
 minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko-KR"
 title                    : "HinaUsagi"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
