--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "HinaUsagi"
+  name             : "히나노트"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "히나노트의 블로그입니다."
   location         : "South Korea"
