--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,9 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
+  - title: "Category"
+    url: /categories/
+  - title: "Tag"
+    url: /tags/
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
